--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.java.home=C:\\Users\\coach\\.jdks\\openjdk-15.0.1
 
 # Fabric Properties
 minecraft_version=1.16.3
